Update CI and build system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake;${CMAKE_CURRENT
 
 ## Set minimum versions required:
 set(QT_MIN_VERSION "5.15.0")
+set(WAYLAND_MIN_VERSION "1.15")
 
 ## Liri specific setup common for all modules:
 include(LiriSetup)
@@ -26,6 +27,10 @@ if(NOT (LINUX OR APPLE OR QNX))
     message(NOTICE "Skipping the build as the condition \"LINUX OR APPLE OR QNX\" is not met.")
     return()
 endif()
+
+## Find Wayland:
+find_package(Wayland "${WAYLAND_MIN_VERSION}" COMPONENTS Client)
+set_package_properties(Wayland PROPERTIES TYPE REQUIRED)
 
 ## Find Qt 5:
 find_package(Qt5 "${QT_MIN_VERSION}"
