--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,8 +17,8 @@ on:
       - develop
 
 jobs:
-  linux:
-    uses: lirios/.github/.github/workflows/build-linux.yml@master
+  linux-qt5:
+    uses: lirios/.github/.github/workflows/build-linux-qt5.yml@master
     with:
       dependencies: "wayland-devel wayland-protocols-devel"
-      build_dependencies: "cmake-shared:aurora-scanner"
+      build_dependencies: "cmake-shared aurora-scanner"
